--- a/Games/style.css
+++ b/Games/style.css
@@ -3,6 +3,7 @@ body {
     background:#0f1b26 ;
     margin-left:auto ;
     margin-right: auto;
+    max-width: 800px;
 }
 h1,h2{
     text-align: center;
