--- a/Games/style.css
+++ b/Games/style.css
@@ -21,4 +21,13 @@ em{
 .dues{
     text-align: center;
 }
+@media (max-width: 480px) {
+    header {
+        padding: 60px 0;
+    }
+    
+     h1 {
+        font-size: 28px;
+    }
+}
 
