--- a/Guis/style.css
+++ b/Guis/style.css
@@ -24,3 +24,12 @@ em{
 a{
     color: #33bbff;
 }
+@media (max-width: 480px) {
+    header {
+        padding: 60px 0;
+    }
+    
+     h1 {
+        font-size: 28px;
+    }
+}
