--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css');
 body{
     color: #f5e8d1;
     background:#0f1b26 ;
@@ -19,6 +20,12 @@ h2{
 a {
     color: #33bbff;
     text-decoration: none;
+}
+footer {
+    text-align: center;
+}
+.logos {
+    gap: 60px; 
 }
 @media (max-width: 480px) {
     header {
